Fixes heading word break layout issue

--- a/client/index.css
+++ b/client/index.css
@@ -123,6 +123,7 @@ h5,
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.2;
+  word-break: break-word;
 }
 
 h1 a,
